# app/Http/Requests/Auth/LogInRequest.php
@@ -1,0 +1,21 @@
+<?php
+
+namespace App\Http\Requests\Auth;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class LogInRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function rules(): array
+    {
+        return [
+            'email' => ['required', 'string'],
+            'password' => ['required', 'string'],
+        ];
+    }
+}
