# routes/api.php
@@ -1,9 +1,15 @@
 <?php
 
+use App\Http\Controllers\AuthController;
 use App\Http\Controllers\UserController;
 use Illuminate\Support\Facades\Route;
 
 Route::post('register', [UserController::class, 'create']);
+Route::post('login', [AuthController::class, 'login']);
+
+Route::middleware('auth:sanctum')->group(function () {
+    Route::delete('logout', [AuthController::class, 'logOut']);
+});
 
 Route::get('/', function () {
     return response()->json(['message' => 'ok']);
